syntax = "proto3";

service UserInfoAPI {
  rpc GetUserBasicInfo (UserBasicInfoRequest) returns (UserBasicInfo) {}
}

message UserBasicInfoRequest {
  string email = 1;
  string password = 2;
}

message UserBasicInfo {
  string id = 1;
  string email = 2;
}
